Update on Overleaf.

--- a/Paper/Limits_to_the_Nea_Hum_admixture_dating_revised.tex
+++ b/Paper/Limits_to_the_Nea_Hum_admixture_dating_revised.tex
@@ -140,7 +140,7 @@
 
 \section{Abstract}\label{abstract}
 
-Neandertal DNA makes up 2-3\% of the genomes of all non-African individuals on average. The length of Neandertal ancestry segments in modern humans has been used to estimate that the mean time of gene flow occurred during the expansion of modern humans into Eurasia, but the precise dates of this gene flow remain largely unknown. Here, we introduce an extended admixture pulse model that allows joint estimation of the timing and duration of gene flow. This model contains two parameters, one for the mean time of gene flow, and one for the duration of gene flow whilst retaining much of the mathematical simplicity of the simple pulse model. In simulations, we find that estimates of the mean time of admixture are largely robust to details in gene flow models. In contrast, the duration of the gene flow is much more difficult to recover, except under ideal circumstances where gene flow is recent or the exact recombination rate is known. We conclude that gene flow from Neandertals into modern humans could have happened over hundreds of generations. Ancient genomes from the time around the admixture event are thus likely required to resolve the question when, where, and for how long humans and Neandertals interacted.
+Neandertal DNA makes up 2-3\% of the genomes of all non-African individuals. The patterns of Neandertal ancestry in modern humans have been used to estimate that the mean time of gene flow occurred during the expansion of modern humans into Eurasia, but the precise dates of this gene flow remain largely unknown. Here, we introduce an extended admixture pulse model that allows joint estimation of the timing and duration of gene flow. This model contains two parameters, one for the mean time of gene flow, and one for the duration of gene flow whilst retaining much of the mathematical simplicity of the simple pulse model. In simulations, we find that estimates of the mean time of admixture are largely robust to details in gene flow models. In contrast, the duration of the gene flow is much more difficult to recover, except under ideal circumstances where gene flow is recent or the exact recombination rate is known. We conclude that gene flow from Neandertals into modern humans could have happened over hundreds of generations. Ancient genomes from the time around the admixture event are thus likely required to resolve the question when, where, and for how long humans and Neandertals interacted.
 
 \section{Introduction}\label{introduction}
 
@@ -154,7 +154,7 @@ As a second line of evidence, all non-Africans carry genomic segments that are v
 However, uncertainty remains about when, where, and over which period of time this gene flow happened. A better understanding of  the location and timing of the gene flow would allow us to place  constraints on the timing of movements of early  humans. More certainty in the timing of gene flow also would affect  assumptions about introgressed allele frequencies and their distribution in present-day human genomes and conclusions drawn about the phenotypic effects and selective pressures of introduced alleles.
 
  
-Archaelogical evidence puts some boundaries on the times when Neandertals and modern humans might have interacted. The earliest modern human remains outside of Africa are dated to around 188 thousand years ago (kya)  \citep{hershkovitz_earliest_2018,stringer_when_2018} and the latest Neandertals are suggested to be between 37 kya and 39 kya old \citep{higham_timing_2014,zilhao_precise_2017}. Thus the time window where Neandertals and modern humans might have been in the same area stretches more than 140,000 years. However, there is less direct evidence of modern humans and Neandertals in the same geographical location at the same time. In Europe, for example, Neandertals and modern humans likely overlapped only for less than 10,000 years \citep{bard_extended_2020}. 
+Archaelogical evidence puts some boundaries on the times when Neandertals and modern humans might have interacted. The earliest modern human remains outside of Africa are dated to around 188 thousand years ago (kya)  \citep{hershkovitz_earliest_2018,stringer_when_2018} and the latest Neandertals are suggested to be between 37 kya and 39 kya old \citep{higham_timing_2014,zilhao_precise_2017}. Thus the time window where Neandertals and modern humans might have been in the same area stretches over more than 140,000 years. However, there is less direct evidence of modern humans and Neandertals in the same geographical location at the same time. In Europe, for example, Neandertals and modern humans likely overlapped only for less than 10,000 years \citep{bard_extended_2020}. 
 
 \subsection{Genetic dating of gene flow}\label{Admixture models}
 
@@ -459,7 +459,7 @@ First, we evaluate under which condidtions we can tell the two models apart. For
 \subsection{Population genetic model comparisons}\label{Model comparison}
 In the previous section, we have shown that we can distinguish long pulses from instantenous gene flow under idealized conditions. As a more realistic scenario, we perform population genetic simulations using  msprime\citep{kelleher_efficient_2016}. 
 
-Throughout, we simulation 3 \% Neandertal admixture into non-Africans using a demographic model of archaic introgression (Supplement Figure \ref{fig:figS1}B) with a mean admixture time of 1500 generations ago and varying durations.  We simulate 20 chromsomes of length 150MB, using either a constant recombination map, or using the HapMap recombination map \cite{HapMapConsortium_second_2007} for both simulations and inference. This results in $\approx$ 10,000 introgressed segments. We then perform inference either using the ``true'' simulated segments, segments inferred from the data \citep{skov_detecting_2018}, or ALD calculated using ALDER \citep{loh_inferring_2013}. To enrich for Neandertal informative sites when using ALD, we only consider sites that are fixed for the ancestral state in Africans and polymorphic or fixed derived in Neandertals (lower-enrichment ascertainment scheme (LES)). Pairs of SNPs or segments with a minimal distance smaller 0.05 cM are excluded.
+Throughout, we simulation 3 \% Neandertal admixture into non-Africans using a demographic model of archaic introgression (Supplement Figure \ref{fig:figS1}B) with a mean admixture time of 1500 generations ago and varying durations.  We simulate 20 chromsomes of length 150MB, using either a constant recombination map, or using the HapMap recombination map \cite{HapMapConsortium_second_2007} for both simulations and inference. This results in $\approx$ 10,000 introgressed segments. We then perform inference either using the ``true'' simulated segments, segments inferred from the data \citep{skov_detecting_2018}, or ALD calculated using ALDER \citep{loh_inferring_2013}.We further vary recombination rate settings as i) inference and simulation under constant recombination rate (Constant/Constant), ii) simulation using the HapMap genetic map \citep{HapMapConsortium_second_2007}, no correction (HapMap/Constant) (Supplement Figure \ref{fig:figResult2_sup}), iii) simulation using HapMap, correction using African-American map (HapMap/AAMap) (Supplement Figure \ref{fig:figResult2_sup}) \citep{hinch_landscape_2011}, iv) inference and simulation using HapMap (HapMap/HapMap). To enrich for Neandertal informative sites when using ALD, we only consider sites that are fixed for the ancestral state in Africans and polymorphic or fixed derived in Neandertals (lower-enrichment ascertainment scheme (LES)). Pairs of SNPs or segments with a minimal distance smaller 0.05 cM are excluded.
 
 When comparing the results of the model comparison (FIG), we find that the results for the ``true'' (simulated) segments match closely the idealized case. In contrast, we find that for inferred segments, results greatly depend on the recombination rate used. For a constant recombination rate, results are similar, but for the hapmap-recombination map, we do not have any power to distinguish these scenarios. 
 
@@ -492,11 +492,11 @@ For real data application ALD seems more suitable since it produces unbiased est
 We contrast the effect of extended gene flow on admixture time inference with  the effects of a complex demographic history (Supplement Figure \ref{fig:figS1}B) and a variable recombination map (\emph{i.e.} using an empirical map for simulations but assuming a constant rate for the analysis), as well as the impact of the ascertainment scheme used to amplify Neandertal introgressed variants in the analysis, the minimum genetic distance between variants ,$d_0$, in the ALD estimation and the accuracy of the ALD estimates using a simple and complex setting for each of these parameters. 
 
 
-In Figure \ref{fig:figGLM}, we present the admixture time model effect sizes for these six variables and four interactions. These effect sizes are estimated using a GLM on simulations under all possible parameter combinations on a scenario with admixture happening 1,500 generations ago. (Supplement Figure \ref{fig:figSGLM_data_SP} and \ref{fig:figSGLM_data_EP}, Supplement Table \ref{tab:table_S1_EP_tm_td_and_SP_model_3}).
+In Figure \ref{fig:figGLM}, we present the admixture time model effect sizes for these six variables and four interactions. We report the effect sizes on the standardized difference between the true and estimated mean admixture time as well as on the standardized absolute differences. The first can inform us if a variable causes a systematic bias, whereas the latter is informative about a variable increasing uncertainty in our estimates. These effect sizes are estimated using a GLM on simulations under all possible parameter combinations on a scenario with admixture happening 1,500 generations ago. (Supplement Figure \ref{fig:figSGLM_data_SP} and \ref{fig:figSGLM_data_EP}, Supplement Table \ref{tab:table_S1_EP_tm_td_and_SP_model_3}).
 
-As a baseline, for comparison, we define a standard model as one using the lower-enrichment ascertainment scheme (LES), $d_{0}$ = 0.05 cM, all SNPs used for ALD estimation, simple demography and constant recombination rate over the chromosome. This baseline model results in a good estimate under the single pulse model, and a slight upward bias for the extended pulse model.
+As a baseline, for comparison, we define a standard model as one using the lower-enrichment ascertainment scheme (LES), $d_{0}$ = 0.05 cM, all SNPs used for ALD estimation, simple demography and constant recombination rate over the chromosome. This baseline model results in a good estimate under the single pulse model with low variation, and a slight upward bias 0.21 (0.14 0.27 $C.I._{95\%}$) and slightly more variation in the estimates for the extended pulse model (0.14, 0.09 -- 0.20).
 
-The effect of an extended period of gene flow is one of the weakest effects with -0.17 (-0.21 -0.13 $C.I._{95\%}$) for the simple pulse and also a minor effect of -0.12 (-0.16 -0.08 $C.I._{95\%}$) for the extended pulse model. For both models uncertainty in the genetic distances causes a substantial overall downward bias (-1.22, -1.29 -- -1.16 SP; -0.68, -0.75 -- -0.61 EP). Including short-range LD causes and upward bias which is more pronounced in the extended pulse model ( 0.15, 0.08 -- 0.21 SP; 0.39, 0.32 -- 0.46 EP). A more complex demography similarly downward biases the estimates (-0.27, -0.33 -- 0.22 SP; -0.39, --0.45 -- - 0.34 EP). The ALD estimates seem robust since the overall effect of downsampling also with changing ascertainment scheme is not significant for both models (Supplement Table \ref{tab:table_S1_EP_tm_td_and_SP_model_3}).
+The effect of an extended period of gene flow is one of the weakest effects with -0.17 (-0.23 -0.11 $C.I._{95\%}$) for the simple pulse and also a minor effect of 0.10 (0.04  0.16 $C.I._{95\%}$) for the extended pulse model. For both models uncertainty in the genetic distances causes a substantial overall downward bias (-1.22, -1.29 -- -1.16 SP; -0.53, -0.59 -- -0.46 EP), as well as highly increased variance in the estimates (1.33, 1.27 -- 1.39 SP; 0.97, 0.91 -- 1.02 EP). Including short-range LD causes and upward bias which is more pronounced in the extended pulse model ( 0.14, 0.08 -- 0.20 SP; 0.59, 0.53 -- 0.66 EP), with no differences in variance for the simple pulse but an increase in the estimates under the extended pulse model (0.26, 0.20 -- 0.32). A more complex demography similarly downward biases the estimates (-0.28, -0.33 -- 0.22 SP; -0.22, --0.29 -- - 0.16 EP) with some minor increases in estimate variance (0.25, -0.20 -- 0.31 SP; 0.17, 0.11 -- 0.23 EP). The ALD estimates seem unbiased since the overall effect of downsampling also with changing ascertainment scheme have only minor effects for both models and fairly robust since the overall introduced variance are (0.09, 0.03 -- 0.15 SP; 0.22, 0.16 -- 0.27). An increasing effect on the variance can be detected for the ascertainment scheme (0.26, 0.20 -- 0.32 SP; 0.25, 0.19 -- 0.30 EP )(Supplement Table \ref{tab:table_S1_EP_tm_td_and_SP_model_3}).
 
 
 Overall the bias introduced by the ascertainment and admixture model are small: around +/-0.16 standard deviations or smaller. The effect of short range LD can be easily avoided by using a longer genetic distance cutoff. The slight downward bias in the estimates from Figure \ref{fig:figResult2} can be explained by the effect of changing population sizes in the demographic model. We conclude that major uncertainties in the admixture time estimate arise from assuming a constant recombination rate. The admixture time estimates using a simple or extended admixture pulse are similarly affected by the other modeling parameters.
@@ -513,18 +513,15 @@ Overall the bias introduced by the ascertainment and admixture model are small: 
 
 In the previous section we established the major sources of biases being the uncertainty in the recombination rates and the optimal parameter settings for analysis on ALD data. Together with the observation in Figure \ref{fig:fig1_1} that the more time elapsed since admixture the harder is it to distinguish the two models, we want to know if we can retrieve the admixture duration using ALD data and optimised settings (ascertainment scheme = LES and  d0 = 0.05 cM) under various recombination scenarios when sampling closer to the end of the admixture event.
 
-In Figure \ref{fig:Closer_sampling}, we show the accuracy of $t_d$ and $t_m$ estimates in two sets of simulations. In panels A and B we increase both $t_m$ and $t_d$ at a similar rate, such that gene flow ends 50 generations before sampling ($t_{end}=50$, where $t_{end}= t_m - \frac{t_d}{2}$). In panels C and D $t_d$ is kept fixed at 800, but we increase $t_m$. We further vary recombination rate settings as i) inference and simulation under constant recombination rate, ii) simulation using the HapMap genetic map \citep{HapMapConsortium_second_2007}, no correction, iii) simulation using HapMap, correction using African-American map (AAMap) \citep{hinch_landscape_2011}, iv) inference and simulation using HapMap. 
+In Figure \ref{fig:Closer_sampling}, we show the accuracy of $t_d$ and $t_m$ estimates in two sets of simulations. In panels A and B we increase both $t_m$ and $t_d$ at a similar rate, such that gene flow ends 50 generations before sampling ($t_{end}=50$, where $t_{end}= t_m - \frac{t_d}{2}$). In panels C and D $t_d$ is kept fixed at 800, but we increase $t_m$. We again vary recombination rate settings as i) inference and simulation under constant recombination rate, ii) simulation using the HapMap genetic map, no correction, iii) simulation using HapMap, correction using African-American map, iv) inference and simulation using HapMap. 
 
 Figure \ref{fig:Closer_sampling}A and C show the mean time estimates received from the simple and extended pulse model fit. Figure \ref{fig:Closer_sampling}B and D show the corresponding admixture duration estimate. 
 
-Under constant recombination settings, we find that parameters under the extended pulse are well-estimated in all scenarios, although we observe a small overestimate of both $t_m$ and $t_d$, for very long admixture durations over 1000 generations in the very distant past (more than 600 generations ago). In contrast, inference under the simple pulse model results in the known underestimate for long admixture durations (Figure  \ref{fig:Closer_sampling}A).
+Under constant recombination settings, we find that parameters under the extended pulse are well-estimated in all scenarios, although we observe a small overestimate of $t_d$, for very long admixture durations over 1000 generations in the very distant past (more than 600 generations ago). In contrast, inference under the simple pulse model results in the known previously observed underestimates of the mean admixture time for long admixture durations (Figure  \ref{fig:Closer_sampling}A).
 
-We also find that the simple pulse model is fairly robust to changes in recombination settings, both using the ``correct'' and an empirically similar recombination map. Only when we do not correct for recombination rate variation, we observe a substantial underestimate by almost a factor of two for more distant admixture (Figure \ref{fig:Closer_sampling}A \& C, left panels). 
+We also find that the mean admixture time estimates under the extended pulse model are fairly robust and unbiased to changes in recombination settings, where we can not detect systematic bias towards more recent admixture times as in the simple-pulse model. (Figure \ref{fig:Closer_sampling}A \& C, left panels). 
 
-In contrast, estimates under the extended pulse model are substantially more spread out under variable recombination maps, but we do not observe the systematic bias towards more recent admixture times as in the simple-pulse model. In contrast, the uncorrected scenario results in extremely poor estimates with very high variation, and is clearly unsuitable for this purpose (Figure \ref{fig:Closer_sampling}A \& C, right panels)
-
-
-We also find that estimates of $t_d$ differ substantially between recombination rate settings. Under constant rates, $t_d$ is well-estimated in all scenarios, and if the recombination rate is known, we get reasonably accurate estimates, at least if admixture is not older than 100 generations. However, under the scenarios where recombination rates differ between simulation and inference, results become more erratic; For the cases of $t_d=200$ and $t_d=400$, many simulations infer an admixture time of near zero; in contrast, very old admixture results in a large overestimate.
+In contrast, we find that estimates of $t_d$ differ substantially between recombination rate settings. Under constant rates, $t_d$ is well-estimated in all scenarios, and if the recombination rate is known, we get reasonably accurate estimates, at least if admixture is not older than 100 generations. However, for older events and under the scenarios where recombination rates differ between simulation and inference, results become more erratic; For the cases of $t_d=200$ and $t_d=400$, many simulations using empirical maps for correction infer an admixture time of near zero; in contrast, the corrections using a constant recombination rate shows a systematical upward bias when sampling further away from the admixture event..
 
 \begin{figure}
 \centering
